--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock Paper Game</title>
+    <link rel="sy" href="styleSheet.css">
 </head>
 <body>
-    
+    <script src="app.js"></script>
 </body>
 </html>
