Added baics strucures

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="sy" href="styleSheet.css">
 </head>
 <body>
+    <h1 id="h1">Rock Paper Scissors</h1>
+    <div class="options">Choices
+        <div class="choice"> rock</div>
+        <div class="choice">paper</div>
+        <div class="choice">scissors</div>
+    </div>
+    <div class="scoreboard">scoreboard
+        <div class="score">0</div>
+        <div class="score">0</div>
+    </div>
+    <div class="msg-container">play game</div>
     <script src="app.js"></script>
 </body>
 </html>
